--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-<<<<<<< HEAD
   "name": "vitalsync-frontend",
   "private": true,
   "version": "0.0.0",
@@ -11,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.1.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "lucide-react": "^0.525.0",
+    "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
     "@eslint/js": "^9.29.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
@@ -29,10 +30,5 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
     "vite": "^7.0.0"
-=======
-  "dependencies": {
-    "lucide-react": "^0.525.0",
-    "react-router-dom": "^7.6.3"
->>>>>>> 54f9c9ae8785890c72365cb58127aa8696a9218c
   }
 }
